--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -55,7 +55,7 @@
       <div class="shortbio">
           ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Almada, PT
           <br>
-          🎓 Integrated Master (BSc. and MSc. bologna degree) @ FCT NOVA
+          🎓 Integrated Master (BSc./MSc. bologna degree) @ FCT NOVA
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
