--- a/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.css
+++ b/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.css
@@ -8,7 +8,7 @@ Computer Graphics and Interfaces (2016-2017)
 Lab Work 2 - 3D Object Viewer - Geometric Solids
 
 Daniel Filipe Pimenta - no. 45404 - d.pimenta@campus.fct.unl.pt
-Ruben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt
+Rúben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt
 
 */
 
