--- a/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.css
+++ b/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.css
@@ -27,7 +27,7 @@ body {
   font-weight: bold;
   overflow: hidden;
   background-color: #000000;
-  background-image: url("imgs/background.jpg");
+  background-image: url("imgs/JPGs/background.jpg");
 }
 
 #viewarea {
