--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -153,7 +153,7 @@
       
       <center>
         <audio controls>
-            <source src="music/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3" type="audio/mpeg">
+            <source src="musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3" type="audio/mpeg">
           </audio>
       </center>
     
