--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -152,7 +152,7 @@
       <hr/>
       
       <center>
-        <audio controls>
+        <audio controls autoplay>
             Travis Scott feat. Kendrick Lamar - Goosebumps
             <source src="musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3" type="audio/mpeg">
           </audio>
